--- a/src/Components/Todo.css
+++ b/src/Components/Todo.css
@@ -36,4 +36,31 @@ li{
     background-color: black !important;
     color: white !important;
     border: none;
+    list-style-type: none;
+    border-radius: 5px;
+    padding: 10px;
+
+}
+.list-items{
+    display: flex;
+}
+.list-items .list-item-list{
+    flex: 1;
+}
+.list-items .list-item-icons{
+    padding-left: 5px;
+    font-size: 25px;
+}
+#complete{
+    color: green;
+}
+#edit{
+    color: blue;
+}
+#delete{
+    color: red;
+}
+#list-item{
+    text-decoration: line-through red;
+    opacity: 0.3;
 }
