--- a/src/Components/Todo.css
+++ b/src/Components/Todo.css
@@ -1,10 +1,16 @@
+body{
+
+    background-color: rgb(111, 34, 184);
+}
 .container{
     width: 30%;
     margin-top: 50px;
-    background-color: #012727d7;
+    background-color: rgb(13, 2, 24,0.80);
+    color: #333;
     border: none;
     padding: 30px;
     border-radius: 10px;
+    opacity: 0.7;
 }
 h2{
    text-align: center;
@@ -62,5 +68,5 @@ li{
 }
 #list-item{
     text-decoration: line-through red;
-    opacity: 0.3;
+    opacity: 0.7;
 }
