--- a/src/Components/Todo.css
+++ b/src/Components/Todo.css
@@ -10,11 +10,11 @@ body{
     border: none;
     padding: 30px;
     border-radius: 10px;
-    opacity: 0.7;
+    opacity: 0.75;
 }
 h2{
    text-align: center;
-   color: white; 
+   color: rgb(255, 255, 255); 
 }
 .form-group{
     display: flex;
